--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,6 +21,8 @@
   --headerBg: rgba(0, 0, 0, 0.7);
   --surfaceContainerBg: #0d0d0d;
   --lightBg: #8a8888;
+  --cardSurfaceLight: #171717;
+  --cardSurfaceDark: #121212;
 }
 
 body {
@@ -36,6 +38,7 @@ body {
 
 * {
   color: var(--white);
+  font-family: Roboto;
 }
 
 /* setting styles */
@@ -59,6 +62,7 @@ h6,
 button {
   margin: 0;
   padding: 0;
+  font-family: Roboto;
 }
 
 h1 {
@@ -104,4 +108,39 @@ span {
 a {
   text-decoration: none;
   font-family: Roboto;
+}
+
+.rt-italic {
+  font-style: italic;
+}
+.rt-bold {
+  font-weight: 700;
+}
+.rt-underline {
+  text-decoration: underline;
+}
+
+@mixin content-padding {
+  @media (min-width: 760px) {
+    flex-direction: row-reverse;
+    padding: 0 var(--contentPaddingTablet);
+    @media (min-width: 1080px) {
+      padding: 0 var(--contentPaddingDesktop);
+      @media (min-width: 1400px) {
+        padding: 0 var(--contentPaddingDesktopBig);
+      }
+    }
+  }
+}
+
+button {
+  outline: none;
+  border: none;
+}
+
+textarea,
+input {
+  background: transparent;
+  border: none;
+  outline: none;
 }
