--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -80,6 +80,7 @@
     gap: 20px;
     @media (min-width: 760px) {
       flex-direction: row;
+      align-items: center;
     }
     a {
       font-size: 46px;
@@ -93,6 +94,30 @@
       }
       @media (min-width: 760px) {
         font-size: 24px;
+      }
+    }
+    &-profile {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      @media (min-width: 760px) {
+        display: none;
+      }
+      &-desktop {
+        display: none;
+      @media (min-width: 760px) {
+        display: flex;
+      }
+      }
+      &-text {
+        margin-left: 10px;
+        p {
+          display: flex;
+          align-items: center;
+          span {
+            margin-right: 10px;
+          }
+        }
       }
     }
   }
