--- a/src/app/(workouts-and-articles)/layout.scss
+++ b/src/app/(workouts-and-articles)/layout.scss
@@ -1,13 +1,14 @@
 @import "../globals.scss";
 
-.articles-body {
+.wanda-body {
+  margin-top: 60px;
   @include content-padding;
-    margin-top: 60px;
-  & > h1 {
-    color: var(--primary);
-    text-transform: uppercase;
-    margin-bottom: 40px;
-  }
+  .content-body {
+    & > h1 {
+      color: var(--primary);
+      text-transform: uppercase;
+      margin-bottom: 40px;
+    }
   &-content {
     @media (min-width: 760px) {
       max-width: 70%;
@@ -15,5 +16,6 @@
     .article-card {
       margin-bottom: 20px;
     }
+  }
   }
 }
