--- a/src/components/contentCard/styles.scss
+++ b/src/components/contentCard/styles.scss
@@ -4,6 +4,14 @@
   &-text {
     padding: 10px 20px;
     width: 80%;
+    &-title {
+      display: flex;
+      align-items: center;
+      * + * {
+        margin-left: 10px;
+        padding: 0;
+      }
+    }
     &-description {
       --ln-height: 20px;
       line-height: var(--ln-height);
